Edit pipeline.config for better training

--- a/containers/mobilenet/training/scripts/pipeline.config
+++ b/containers/mobilenet/training/scripts/pipeline.config
@@ -137,10 +137,14 @@ model {
 train_config {
   batch_size: BATCH_SIZE_PARAM
   data_augmentation_options {
+    random_adjust_brightness {
+    }
     random_horizontal_flip {
     }
   }
   data_augmentation_options {
+    random_adjust_saturation {
+    }
     ssd_random_crop {
     }
   }
